--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  fl_chart: ^0.69.0
   flutter:
     sdk: flutter
   flutter_local_notifications: ^17.2.2
   gap: ^3.0.1
+  intl: ^0.19.0
   provider: ^6.1.2
 
 dev_dependencies:
